ENH: refine translations for ams mapping
Change-Id: I302d9de0022c7050e384590747d4241b367f4984

--- a/bbl/i18n/BambuStudio.pot
+++ b/bbl/i18n/BambuStudio.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-08-03 16:53+0800\n"
+"POT-Creation-Date: 2022-08-04 11:33+0800\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -1258,6 +1258,13 @@ msgid "SN"
 msgstr ""
 
 msgid "Confirm"
+msgstr ""
+
+msgid "AMS Slots"
+msgstr ""
+
+msgid ""
+"Note: Only the AMS slots loaded with the same material type can be selected."
 msgstr ""
 
 msgid "Insertion update"
@@ -3255,13 +3262,13 @@ msgstr ""
 
 #, possible-c-format, possible-boost-format
 msgid ""
-"Filament index %s exceeds the number of AMS slots. Please update the printer "
+"Filament %s exceeds the number of AMS slots. Please update the printer "
 "firmware to support AMS slot assignment."
 msgstr ""
 
 msgid ""
-"Filament index exceeds the number of AMS slots. Please update the printer "
-"firmware to support AMS slot assignment."
+"Filament exceeds the number of AMS slots. Please update the printer firmware "
+"to support AMS slot assignment."
 msgstr ""
 
 msgid ""
@@ -3276,13 +3283,13 @@ msgstr ""
 
 #, possible-c-format, possible-boost-format
 msgid ""
-"Filament index %s does not match the filament in AMS slot %s. Please update "
-"the printer firmware to support AMS slot assignment."
+"Filament %s does not match the filament in AMS slot %s. Please update the "
+"printer firmware to support AMS slot assignment."
 msgstr ""
 
 msgid ""
-"Filament index does not match the filament in AMS slot. Please update the "
-"printer firmware to support AMS slot assignment."
+"Filament does not match the filament in AMS slot. Please update the printer "
+"firmware to support AMS slot assignment."
 msgstr ""
 
 msgid ""
