--- a/bbl/i18n/sv/BambuStudio_sv.po
+++ b/bbl/i18n/sv/BambuStudio_sv.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Bambu Studio\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-08-03 16:53+0800\n"
+"POT-Creation-Date: 2022-08-04 11:33+0800\n"
 "PO-Revision-Date: \n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -1306,6 +1306,13 @@ msgstr "SN"
 
 msgid "Confirm"
 msgstr "Acceptera"
+
+msgid "AMS Slots"
+msgstr ""
+
+msgid ""
+"Note: Only the AMS slots loaded with the same material type can be selected."
+msgstr ""
 
 msgid "Insertion update"
 msgstr "Insertion update"
@@ -3399,13 +3406,13 @@ msgstr "The printer is busy with another print job."
 
 #, c-format, boost-format
 msgid ""
-"Filament index %s exceeds the number of AMS slots. Please update the printer "
+"Filament %s exceeds the number of AMS slots. Please update the printer "
 "firmware to support AMS slot assignment."
 msgstr ""
 
 msgid ""
-"Filament index exceeds the number of AMS slots. Please update the printer "
-"firmware to support AMS slot assignment."
+"Filament exceeds the number of AMS slots. Please update the printer firmware "
+"to support AMS slot assignment."
 msgstr ""
 
 msgid ""
@@ -3424,13 +3431,13 @@ msgstr ""
 
 #, c-format, boost-format
 msgid ""
-"Filament index %s does not match the filament in AMS slot %s. Please update "
-"the printer firmware to support AMS slot assignment."
+"Filament %s does not match the filament in AMS slot %s. Please update the "
+"printer firmware to support AMS slot assignment."
 msgstr ""
 
 msgid ""
-"Filament index does not match the filament in AMS slot. Please update the "
-"printer firmware to support AMS slot assignment."
+"Filament does not match the filament in AMS slot. Please update the printer "
+"firmware to support AMS slot assignment."
 msgstr ""
 
 msgid ""
@@ -5949,8 +5956,8 @@ msgid ""
 "interface is Concentric"
 msgstr ""
 "Linje mönster för support gränssnittsytan .Standardmönstret för olösligt "
-"(material) support gränssnittet är Räta medan standardmönstret för "
-"lösligt(material) stödgränssnittet är koncentriskt"
+"(material) support gränssnittet är Räta medan standardmönstret för lösligt"
+"(material) stödgränssnittet är koncentriskt"
 
 msgid "Base pattern spacing"
 msgstr "Basens mönster mellanrum"
