--- a/bbl/i18n/es/BambuStudio_es.po
+++ b/bbl/i18n/es/BambuStudio_es.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Bambu Studio\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-08-04 11:33+0800\n"
+"POT-Creation-Date: 2022-08-05 12:00+0800\n"
 "PO-Revision-Date: \n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -477,6 +477,25 @@ msgstr "Elija uno o varios archivos (3mf/step/stl/obj/amf):"
 
 msgid "Choose one file (gcode/.gco/.g/.ngc/ngc):"
 msgstr "Elija un archivo (gcode/.gco/.g/.ngc/ngc):"
+
+msgid "Some presets are modified."
+msgstr "Algunos preajustes se modifican."
+
+msgid ""
+"You can keep the modifield presets to the new project, discard or save "
+"changes as new presets."
+msgstr ""
+"Puede mantener los preajustes de los campos de trabajo en el nuevo proyecto, "
+"descartar o guardar los cambios como nuevos preajustes."
+
+msgid "User logged out"
+msgstr ""
+
+msgid "new or open project file is not allowed during the slicing process!"
+msgstr ""
+
+msgid "Open Project"
+msgstr "Proyesto Abierto"
 
 msgid ""
 "The version of Bambu studio is too low and needs to be updated to the latest "
@@ -1295,6 +1314,9 @@ msgid ""
 "the corresponding code comments."
 msgstr ""
 
+msgid "AMSMaterialsSetting"
+msgstr ""
+
 msgid "Colour"
 msgstr "Colour"
 
@@ -1320,6 +1342,9 @@ msgstr "SN"
 
 msgid "Confirm"
 msgstr "Confirmar"
+
+msgid "Close"
+msgstr "Cerrar"
 
 msgid "AMS Slots"
 msgstr ""
@@ -1375,9 +1400,6 @@ msgstr ""
 
 msgid "File"
 msgstr "Archivo"
-
-msgid "Close"
-msgstr "Cerrar"
 
 msgid ""
 "A error occurred. Maybe memory of system is not enough or it's a bug of the "
@@ -1783,9 +1805,6 @@ msgid "Update failed."
 msgstr "Actualización fallida."
 
 msgid "Failed to start printing job"
-msgstr ""
-
-msgid "default value"
 msgstr ""
 
 msgid "parameter name"
@@ -2242,9 +2261,6 @@ msgstr "Nuevo proyecto"
 
 msgid "Start a new project"
 msgstr "Empezar un nuevo proyecto"
-
-msgid "Open Project"
-msgstr "Proyesto Abierto"
 
 msgid "Open a project file"
 msgstr "Abrir un archivo de proyecto"
@@ -2729,6 +2745,15 @@ msgctxt "Layers"
 msgid "Bottom"
 msgstr "Inferior"
 
+msgid "Spaghetti Detection"
+msgstr ""
+
+msgid "Stop printing when spaghetti detected"
+msgstr ""
+
+msgid "First Layer Inspection"
+msgstr ""
+
 msgid "Switch to per-object setting mode to edit modifier settings."
 msgstr ""
 "Cambia al modo de ajuste por objeto para editar los ajustes de los "
@@ -2934,20 +2959,10 @@ msgid ""
 "The loaded file contains gcode only, Can not enter the Prepare page"
 msgstr ""
 
-msgid "Some presets are modified."
-msgstr "Algunos preajustes se modifican."
-
 msgid "You can keep the modified presets to the new project or discard them"
 msgstr ""
 "Puedes mantener los preajustes modificados en el nuevo proyecto o "
 "descartarlos"
-
-msgid ""
-"You can keep the modifield presets to the new project, discard or save "
-"changes as new presets."
-msgstr ""
-"Puede mantener los preajustes de los campos de trabajo en el nuevo proyecto, "
-"descartar o guardar los cambios como nuevos preajustes."
 
 msgid "Creating a new project"
 msgstr "Creando un nuevo proyecto"
