--- a/bbl/i18n/fr/BambuStudio_fr.po
+++ b/bbl/i18n/fr/BambuStudio_fr.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Bambu Studio\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-08-04 11:33+0800\n"
+"POT-Creation-Date: 2022-08-05 12:00+0800\n"
 "PO-Revision-Date: \n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -478,6 +478,25 @@ msgstr "Choisissez un ou plusieurs fichiers (3mf/step/stl/obj/amf) :"
 
 msgid "Choose one file (gcode/.gco/.g/.ngc/ngc):"
 msgstr "Choisissez un fichier (gcode/.gco/.g/.ngc/ngc) :"
+
+msgid "Some presets are modified."
+msgstr "Certains préréglages sont modifiés."
+
+msgid ""
+"You can keep the modifield presets to the new project, discard or save "
+"changes as new presets."
+msgstr ""
+"Vous pouvez conserver les préréglages modifiés dans le nouveau projet, "
+"annuler ou enregistrer les modifications en tant que nouveaux préréglages."
+
+msgid "User logged out"
+msgstr ""
+
+msgid "new or open project file is not allowed during the slicing process!"
+msgstr ""
+
+msgid "Open Project"
+msgstr "Projet ouvert"
 
 msgid ""
 "The version of Bambu studio is too low and needs to be updated to the latest "
@@ -1295,6 +1314,9 @@ msgid ""
 "the corresponding code comments."
 msgstr ""
 
+msgid "AMSMaterialsSetting"
+msgstr ""
+
 msgid "Colour"
 msgstr "Colour"
 
@@ -1320,6 +1342,9 @@ msgstr "SN"
 
 msgid "Confirm"
 msgstr "Confirmer"
+
+msgid "Close"
+msgstr "Fermer"
 
 msgid "AMS Slots"
 msgstr ""
@@ -1375,9 +1400,6 @@ msgstr ""
 
 msgid "File"
 msgstr "Dossier"
-
-msgid "Close"
-msgstr "Fermer"
 
 msgid ""
 "A error occurred. Maybe memory of system is not enough or it's a bug of the "
@@ -1767,9 +1789,6 @@ msgid "Update failed."
 msgstr "Mise à jour a échoué."
 
 msgid "Failed to start printing job"
-msgstr ""
-
-msgid "default value"
 msgstr ""
 
 msgid "parameter name"
@@ -2224,9 +2243,6 @@ msgstr "Nouveau Projet"
 
 msgid "Start a new project"
 msgstr "Démarrer un nouveau projet"
-
-msgid "Open Project"
-msgstr "Projet ouvert"
 
 msgid "Open a project file"
 msgstr "Ouvrir un fichier de projet"
@@ -2708,6 +2724,15 @@ msgctxt "Layers"
 msgid "Bottom"
 msgstr "Du bas"
 
+msgid "Spaghetti Detection"
+msgstr ""
+
+msgid "Stop printing when spaghetti detected"
+msgstr ""
+
+msgid "First Layer Inspection"
+msgstr ""
+
 msgid "Switch to per-object setting mode to edit modifier settings."
 msgstr ""
 "Basculez vers le mode de réglage par objet pour modifier les paramètres du "
@@ -2913,20 +2938,10 @@ msgid ""
 "The loaded file contains gcode only, Can not enter the Prepare page"
 msgstr ""
 
-msgid "Some presets are modified."
-msgstr "Certains préréglages sont modifiés."
-
 msgid "You can keep the modified presets to the new project or discard them"
 msgstr ""
 "Vous pouvez conserver les préréglages modifiés dans le nouveau projet ou les "
 "supprimer"
-
-msgid ""
-"You can keep the modifield presets to the new project, discard or save "
-"changes as new presets."
-msgstr ""
-"Vous pouvez conserver les préréglages modifiés dans le nouveau projet, "
-"annuler ou enregistrer les modifications en tant que nouveaux préréglages."
 
 msgid "Creating a new project"
 msgstr "Création d'un nouveau projet"
