--- a/bbl/i18n/en/BambuStudio_en.po
+++ b/bbl/i18n/en/BambuStudio_en.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Bambu Studio\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-08-04 11:33+0800\n"
+"POT-Creation-Date: 2022-08-05 12:00+0800\n"
 "PO-Revision-Date: \n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -467,6 +467,25 @@ msgstr "Choose one or more files (3mf/step/stl/obj/amf):"
 
 msgid "Choose one file (gcode/.gco/.g/.ngc/ngc):"
 msgstr "Choose one file (.gcode/.gco/.g/.ngc/ngc):"
+
+msgid "Some presets are modified."
+msgstr "Some presets are modified."
+
+msgid ""
+"You can keep the modifield presets to the new project, discard or save "
+"changes as new presets."
+msgstr ""
+"You can keep the modified presets for the new project, discard, or save "
+"changes as new presets."
+
+msgid "User logged out"
+msgstr ""
+
+msgid "new or open project file is not allowed during the slicing process!"
+msgstr ""
+
+msgid "Open Project"
+msgstr "Open Project"
 
 msgid ""
 "The version of Bambu studio is too low and needs to be updated to the latest "
@@ -1274,6 +1293,9 @@ msgid ""
 "the corresponding code comments."
 msgstr ""
 
+msgid "AMSMaterialsSetting"
+msgstr ""
+
 msgid "Colour"
 msgstr "Colour"
 
@@ -1299,6 +1321,9 @@ msgstr "SN"
 
 msgid "Confirm"
 msgstr "Confirm"
+
+msgid "Close"
+msgstr "Close"
 
 msgid "AMS Slots"
 msgstr ""
@@ -1354,9 +1379,6 @@ msgstr ""
 
 msgid "File"
 msgstr "File"
-
-msgid "Close"
-msgstr "Close"
 
 msgid ""
 "A error occurred. Maybe memory of system is not enough or it's a bug of the "
@@ -1751,9 +1773,6 @@ msgid "Update failed."
 msgstr "Update failed."
 
 msgid "Failed to start printing job"
-msgstr ""
-
-msgid "default value"
 msgstr ""
 
 msgid "parameter name"
@@ -2210,9 +2229,6 @@ msgstr "New Project"
 
 msgid "Start a new project"
 msgstr "Start a new project"
-
-msgid "Open Project"
-msgstr "Open Project"
 
 msgid "Open a project file"
 msgstr "Open a project file"
@@ -2695,6 +2711,15 @@ msgctxt "Layers"
 msgid "Bottom"
 msgstr "Bottom"
 
+msgid "Spaghetti Detection"
+msgstr ""
+
+msgid "Stop printing when spaghetti detected"
+msgstr ""
+
+msgid "First Layer Inspection"
+msgstr ""
+
 msgid "Switch to per-object setting mode to edit modifier settings."
 msgstr "Switch to per-object setting mode to edit modifier settings."
 
@@ -2894,18 +2919,8 @@ msgstr ""
 "Preview only mode:\n"
 "The loaded file contains G-code only and can not enter the Prepare page"
 
-msgid "Some presets are modified."
-msgstr "Some presets are modified."
-
 msgid "You can keep the modified presets to the new project or discard them"
 msgstr "You can keep the modified presets for the new project or discard them"
-
-msgid ""
-"You can keep the modifield presets to the new project, discard or save "
-"changes as new presets."
-msgstr ""
-"You can keep the modified presets for the new project, discard, or save "
-"changes as new presets."
 
 msgid "Creating a new project"
 msgstr "Creating a new project"
