FIX:fix about dialog text format
Change-Id: I0d76eda1f5b57a480df0ca6f344acc724fbe8f82

--- a/bbl/i18n/zh_cn/BambuStudio_zh_CN.po
+++ b/bbl/i18n/zh_cn/BambuStudio_zh_CN.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Slic3rPE\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-08-08 20:01+0800\n"
+"POT-Creation-Date: 2022-08-10 16:32+0800\n"
 "PO-Revision-Date: 2022-08-07 21:57+0800\n"
 "Last-Translator: Jiang Yue <maze1024@gmail.com>\n"
 "Language-Team: \n"
@@ -1275,7 +1275,7 @@ msgid ""
 "Bambu Studio is based on PrusaSlicer by PrusaResearch and SuperSlicer by "
 "Merill(supermerill)."
 msgstr ""
-"Bambu Studio是以PrusaResearch的PrusaSlicer和Merill（supermerill）的"
+"Bambu Studio是以PrusaResearch的PrusaSlicer和Merill(supermerill)的"
 "SuperSlicer为基础的。"
 
 msgid "PrusaSlicer is originally based on Slic3r by Alessandro Ranellucci."
@@ -1294,7 +1294,7 @@ msgid ""
 "we're unable to list them one-by-one, and instead, they'll be attributed in "
 "the corresponding code comments."
 msgstr ""
-"软件中的很多部分都来自于社区贡献,因此，我们无法逐一列出他们，相反的，他们将被"
+"软件中的很多部分都来自于社区贡献，因此，我们无法逐一列出他们，相反的，他们将被"
 "注释于相应的代码中。"
 
 msgid "AMSMaterialsSetting"
@@ -2310,6 +2310,9 @@ msgstr "使用正交视角"
 
 msgid "Preferences"
 msgstr "偏好设置"
+
+msgid "About"
+msgstr ""
 
 msgid "View"
 msgstr "视图"
