--- a/bbl/i18n/es/BambuStudio_es.po
+++ b/bbl/i18n/es/BambuStudio_es.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Bambu Studio\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-08-10 16:32+0800\n"
+"POT-Creation-Date: 2022-08-12 15:19+0800\n"
 "Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -4310,6 +4310,16 @@ msgstr "Mover el deslizador 5 veces más rápido"
 msgid "Shift+Mouse wheel"
 msgstr ""
 
+msgid "Release Note"
+msgstr ""
+
+#, c-format, boost-format
+msgid "version %s update information :"
+msgstr ""
+
+msgid "New version of Bambu Studio"
+msgstr "Nueva versión de Bambu Studio"
+
 msgid "Saving objects into the 3mf failed."
 msgstr "El guardado de objetos en el 3mf no ha funcionado."
 
@@ -6702,9 +6712,6 @@ msgstr "Soporte: propagar ramas en la capa %d"
 
 #~ msgid "Monitoring"
 #~ msgstr "Monitorizando"
-
-#~ msgid "New version of Bambu Studio"
-#~ msgstr "Nueva versión de Bambu Studio"
 
 #~ msgid "Output file"
 #~ msgstr "Archivo de salida"
