--- a/bbl/i18n/nl/BambuStudio_nl.po
+++ b/bbl/i18n/nl/BambuStudio_nl.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Bambu Studio\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-08-10 16:32+0800\n"
+"POT-Creation-Date: 2022-08-12 15:19+0800\n"
 "Language: nl\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -4313,6 +4313,16 @@ msgstr "Schuifregelaar 5x sneller verplaatsen"
 msgid "Shift+Mouse wheel"
 msgstr ""
 
+msgid "Release Note"
+msgstr ""
+
+#, c-format, boost-format
+msgid "version %s update information :"
+msgstr ""
+
+msgid "New version of Bambu Studio"
+msgstr "Nieuwe versie van Bambu Studio"
+
 msgid "Saving objects into the 3mf failed."
 msgstr "Het opslaan van de objecten naar het 3mf bestand is mislukt."
 
@@ -6718,9 +6728,6 @@ msgstr "Support: propagate branches at layer %d"
 
 #~ msgid "Monitoring"
 #~ msgstr "Monitoren"
-
-#~ msgid "New version of Bambu Studio"
-#~ msgstr "Nieuwe versie van Bambu Studio"
 
 #~ msgid "Output file"
 #~ msgstr "Bestand weergeven"
