--- a/bbl/i18n/sv/BambuStudio_sv.po
+++ b/bbl/i18n/sv/BambuStudio_sv.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Bambu Studio\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-08-10 16:32+0800\n"
+"POT-Creation-Date: 2022-08-12 15:19+0800\n"
 "Language: sv\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -4242,6 +4242,16 @@ msgstr "Flytta reglage 5x snabbare"
 msgid "Shift+Mouse wheel"
 msgstr ""
 
+msgid "Release Note"
+msgstr ""
+
+#, c-format, boost-format
+msgid "version %s update information :"
+msgstr ""
+
+msgid "New version of Bambu Studio"
+msgstr "Ny version av Bambu Studio"
+
 msgid "Saving objects into the 3mf failed."
 msgstr "Sparande av objektet till 3mf misslyckades."
 
@@ -6566,9 +6576,6 @@ msgstr "Support: föröka grenar vid lager %d"
 
 #~ msgid "Monitoring"
 #~ msgstr "Övervakar"
-
-#~ msgid "New version of Bambu Studio"
-#~ msgstr "Ny version av Bambu Studio"
 
 #~ msgid "Output file"
 #~ msgstr "Utdatafil"
